TestCases/ASTTests/SemanticErrorsTests/CreateTests/read_file_after.dot
digraph AST {
  "123619643032432" [label="Start"];
  "123619643032432" -> "123619643035600";
  "123619643035600" [label="Code"];
  "123619643035600" -> "123619643035792";
  "123619643035792" [label="Function"];
  "123619643035792" -> "123619643035888";
  "123619643035792" -> "123619643035936";
  "123619643035792" -> "123619643035984";
  "123619643035888" [label="main"];
  "123619643035936" [label="Parameters"];
  "123619643035984" [label="Code"];
  "123619643035984" -> "123619643036080";
  "123619643035984" -> "123619643036128";
  "123619643036080" [label="Code"];
  "123619643036080" -> "123619643036176";
  "123619643036176" [label="Declaration"];
  "123619643036176" -> "123619643036272";
  "123619643036176" -> "123619643036320";
  "123619643036272" [label="x"];
  "123619643036320" [label="1"];
  "123619643036128" [label="Code"];
  "123619643036128" -> "123619643036368";
  "123619643036368" [label="Declaration"];
  "123619643036368" -> "123619643036464";
  "123619643036368" -> "123619643036512";
  "123619643036464" [label="x"];
  "123619643036512" [label="2"];
}
